# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
#

2005-02-01 19:28:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-55

    Summary:
      Added tests for dicts
    Revision:
      missingexts--head--0.7--patch-55


    modified files:
     ChangeLog testsrc/Objectstest.hs


2005-02-01 19:03:30 GMT	John Goerzen <jgoerzen@complete.org>	patch-54

    Summary:
      Added error checking for C functions returning CInt
    Revision:
      missingexts--head--0.7--patch-54


    modified files:
     ChangeLog Python/Exceptions.hs Python/Interpreter.hsc
     Python/Objects.hs Python/Utils.hs


2005-02-01 17:38:44 GMT	John Goerzen <jgoerzen@complete.org>	patch-53

    Summary:
      Checkpointing (tests work)
    Revision:
      missingexts--head--0.7--patch-53


    modified files:
     ChangeLog Python/Objects/File.hs testsrc/BZip2test.hs


2005-02-01 17:08:28 GMT	John Goerzen <jgoerzen@complete.org>	patch-52

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-52


    modified files:
     ChangeLog MissingPy/FileArchive/BZip2.hs Python/Utils.hs
     glue/glue.c glue/glue.h testsrc/BZip2test.hs


2005-02-01 16:38:47 GMT	John Goerzen <jgoerzen@complete.org>	patch-51

    Summary:
      Checkpointing (initial bzip2)
    Revision:
      missingexts--head--0.7--patch-51


    new files:
     MissingPy/FileArchive/BZip2.hs testsrc/BZip2test.hs
     testsrc/bz2files/.arch-ids/=id
     testsrc/bz2files/.arch-ids/empty.bz2.id
     testsrc/bz2files/.arch-ids/t1.bz2.id
     testsrc/bz2files/.arch-ids/t2.bz2.id
     testsrc/bz2files/.arch-ids/zeros.bz2.id
     testsrc/bz2files/empty.bz2 testsrc/bz2files/t1.bz2
     testsrc/bz2files/t2.bz2 testsrc/bz2files/zeros.bz2

    modified files:
     ChangeLog MissingPy.cabal MissingPy/FileArchive/GZip.hs
     testsrc/GZiptest.hs testsrc/Tests.hs

    new directories: