@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
 #
 
+2005-02-01 19:47:49 GMT	John Goerzen <jgoerzen@complete.org>	patch-56
+
+    Summary:
+      Use generic mapping protocol whenever possible
+    Revision:
+      missingexts--head--0.7--patch-56
+
+
+    modified files:
+     ChangeLog Python/Objects.hs
+
+
 2005-02-01 19:28:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-55
 
     Summary:
